<resources>
    <string name="app_name">Hiccup</string>
    <string name="splash_banner">Splash Banner</string>
    <string name="homeactivity">HomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harsh_canteen">Harsh Canteen</string>
    <string name="ojas_canteen">Ojas Canteen</string>
    <string name="nescafe">NESCAFE</string>
    <string name="h3_canteen">H3 Canteen</string>
    <string name="hexagon_canteen">Hexagon Canteen</string>
    <string name="pg_canteen">PG Canteen</string>
</resources>