<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/canteen_harsh"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/harsh_canteen"
                app:drawableTopCompat="@drawable/canteen" />

            <TextView
                android:id="@+id/canteen_ojas"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/ojas_canteen"
                app:drawableTopCompat="@drawable/canteen" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/canteen_nescafe"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/nescafe"
                app:drawableTopCompat="@drawable/canteen" />

            <TextView
                android:id="@+id/canteen_h3"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/h3_canteen"
                app:drawableTopCompat="@drawable/canteen" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/canteen_hexagon"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/hexagon_canteen"
                app:drawableTopCompat="@drawable/canteen" />

            <TextView
                android:id="@+id/canteen_pg"
                style="@style/Heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_12sdp"
                android:text="@string/pg_canteen"
                app:drawableTopCompat="@drawable/canteen" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>